Fixed layout bugs with RSS story.

--- a/app/styles/cpn/_cpn-snippet.scss
+++ b/app/styles/cpn/_cpn-snippet.scss
@@ -1,5 +1,7 @@
 [cpn-snippet],
 %cpn-snippet {
+    display: block;
+    
     &:not(:last-child) {
         padding-bottom: rem($helper-spacing / 2);
         border-bottom: 1px dotted #fff;
@@ -47,7 +49,7 @@
             vertical-align: top;
             margin-right: rem($helper-spacing);
             margin-bottom: rem($helper-spacing);
-            border-radius: rem(3px);
+            border-radius: rem(1px);
             width: rem(36px);
             height: auto;
         }
