--- a/app/styles/cpn/_cpn-story-body.scss
+++ b/app/styles/cpn/_cpn-story-body.scss
@@ -2,6 +2,7 @@
 %cpn-story-body-scrollv {
     overflow-x: hidden;
     overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 [cpn-story-body~="height2"],
